--- a/flex.html
+++ b/flex.html
@@ -27,7 +27,7 @@
 	      <li><a href="#">Page 2</a></li>
 	      <li><a href="#">Page 3</a></li>
 	    </ul>
-	     <button class="button navbar-btn navbar-right">Add Workout</button>
+	     <button class="button navbar-btn btn-round navbar-right">Add Workout</button>
 
 	  </div>
 	</nav>     
@@ -36,7 +36,7 @@
 <body>
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Hello, {{name}}!</h1>
+			<h1>blahblah!</h1>
 		</div>
 	</div>
 
