--- a/static/flex.html
+++ b/static/flex.html
@@ -5,8 +5,9 @@
 	<title>HCI Project Portfolio</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="/css/flex.css" rel="stylesheet">
+
+	<link href="./../css/flex.css" rel="stylesheet">
+	<link href="./../css/bootstrap.css" rel="stylesheet">
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -16,30 +17,66 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->   
 
-	<nav class="navbar navbar-default navbar-fixed-top">
+	<nav class="navbar navbar-default" id="navigation">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">Flex</a>
+	      <a class="navbar-brand" href="#" id="title">flex</a>
 	    </div>
 	    <ul class="nav navbar-nav navbar-right">
-	      <li class="active"><a href="#">Home</a></li>
-	      <li><a href="#">Page 1</a></li>
-	      <li><a href="#">Page 2</a></li>
-	      <li><a href="#">Page 3</a></li>
-	    </ul>
-	     <button class="button navbar-btn btn-round navbar-right">Add Workout</button>
+	   
+	    <p class="navbar-text navbar-right" id="navText"><a href="#">Settings</a></p>
+	    <p class="navbar-text navbar-right" id="navText" href="#">Stats</p>
+	    <p class="navbar-text navbar-right" id="navText" href="#">Timer</p>
+	    <p class="navbar-text navbar-right" id="navText" href="#">Library</p>
 
+	    <button class="btn navbar-btn navbar-right" id="addWorkoutBtn">Add Workout</button>
+ 		</ul>
 	  </div>
 	</nav>     
 </head>
 
 <body>
-	<div class="container">
-		<div class="jumbotron">
-			<h1>blahblah!</h1>
-		</div>
-	</div>
+	<h3>Your Workouts</h3>
 
+	<ul class="list-group" id="workoutList">
+	  <li class="list-group-item">
+	  	Friday Fun <small class="durationText"> 5 min.</small>
+	  	<button class="btn btn-round text-center navbar-right" id="startBtn">Add Workout</button>
+	  </li>
+	  <li class="list-group-item">
+	  	Friday Fun <small class="durationText"> 5 min.</small>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  </li>
+	  <li class="list-group-item">
+	  	Friday Fun <small class="durationText"> 5 min.</small>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  </li>
+	  <li class="list-group-item">
+	  	Friday Fun <small class="durationText"> 5 min.</small>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  </li>
+	</ul>
+
+	<h3>Preset Workouts</h3>
+
+	<ul class="list-group" id="workoutList">
+	  <li class="list-group-item">
+	  	Friday Fun <small class="durationText"> 5 min.</small>
+	  	<button class="btn btn-round text-center navbar-right" id="startBtn">Add Workout</button>
+	  </li>
+	  <li class="list-group-item">
+	  	Friday Fun <small class="durationText"> 5 min.</small>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  </li>
+	  <li class="list-group-item">
+	  	Friday Fun <small class="durationText"> 5 min.</small>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  </li>
+	  <li class="list-group-item">
+	  	Friday Fun <small class="durationText"> 5 min.</small>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  </li>
+	</ul>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 </body>
