add empty links for nav bar

--- a/static/flex.html
+++ b/static/flex.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>HCI Project Portfolio</title>	
+	<title>Flex</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -23,10 +23,10 @@
 	    </div>
 	    <ul class="nav navbar-nav navbar-right">
 	   
-	    <p class="navbar-text navbar-right" id="navText"><a href="#">Settings</a></p>
-	    <p class="navbar-text navbar-right" id="navText" href="#">Stats</p>
-	    <p class="navbar-text navbar-right" id="navText" href="#">Timer</p>
-	    <p class="navbar-text navbar-right" id="navText" href="#">Library</p>
+	    <p class="navbar-text navbar-right" id="navText"><a href="./../static/Settings.html">Settings</a></p>
+	    <p class="navbar-text navbar-right" id="navText"> <a href="./../static/Stats.html">Stats</a></p>
+	    <p class="navbar-text navbar-right" id="navText"> <a href="./../static/Timer.html">Timer</a></p>
+	    <p class="navbar-text navbar-right" id="navText"> <a href="./../static/Library.html">Library</a></p>
 
 	    <button class="btn navbar-btn navbar-right" id="addWorkoutBtn">Add Workout</button>
  		</ul>
