--- a/static/flex.html
+++ b/static/flex.html
@@ -16,19 +16,15 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->   
 
-	<nav class="navbar navbar-default" id="navigation">
+	<nav class="navbar navbar-toggleable-md navbar-light bg-faded" id="navigation">
 	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#" id="title">flex</a>
-	    </div>
-	    <ul class="nav navbar-nav navbar-right">
-	   
-	    <p class="navbar-text navbar-right" id="navText"><a href="./../static/Settings.html">Settings</a></p>
-	    <p class="navbar-text navbar-right" id="navText"> <a href="./../static/Stats.html">Stats</a></p>
-	    <p class="navbar-text navbar-right" id="navText"> <a href="./../static/Timer.html">Timer</a></p>
-	    <p class="navbar-text navbar-right" id="navText"> <a href="./../static/Library.html">Library</a></p>
-
-	    <button class="btn navbar-btn navbar-right" id="addWorkoutBtn">Add Workout</button>
+	    <a class="navbar-brand" href="#" id="title">flex</a>
+	    <ul class="navbar-nav navbar-right">
+		   	<button class="btn navbar-btn" id="addWorkoutBtn" onclick="addWorkout()">Add Workout</button>
+		    <p class="navbar-text" id="navText"><a href="./../static/Settings.html">Settings</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./../static/Stats.html">Stats</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./../static/Timer.html">Timer</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./../static/Library.html">Library</a></p>
  		</ul>
 	  </div>
 	</nav>     
@@ -40,19 +36,19 @@
 	<ul class="list-group" id="workoutList">
 	  <li class="list-group-item">
 	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round text-center navbar-right" id="startBtn">Add Workout</button>
+	  	<button class="btn btn-round text-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
 	  </li>
 	  <li class="list-group-item">
 	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
 	  </li>
 	  <li class="list-group-item">
 	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
 	  </li>
 	  <li class="list-group-item">
 	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
 	  </li>
 	</ul>
 
@@ -61,22 +57,28 @@
 	<ul class="list-group" id="workoutList">
 	  <li class="list-group-item">
 	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round text-center navbar-right" id="startBtn">Add Workout</button>
+	  	<button class="btn btn-round text-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
 	  </li>
 	  <li class="list-group-item">
 	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
 	  </li>
 	  <li class="list-group-item">
 	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
 	  </li>
 	  <li class="list-group-item">
 	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn">Add Workout</button>
+	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
 	  </li>
 	</ul>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 </body>
+
+<script type="text/javascript">
+	function addWorkout() {
+		location.href = "./addWorkout.html"
+	}
+</script>
 </html>
