--- a/static/Workout.html
+++ b/static/Workout.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Stats</title>	
+	<title>Workout</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -16,6 +16,7 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->   
+
 	<nav class="navbar navbar-toggleable-md navbar-light bg-faded" id="navigation">
 	  <div class="container-fluid">
 	    <ul class="navbar-nav navbar-right" id="navigationBar">
