--- a/static/flex.html
+++ b/static/flex.html
@@ -6,7 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">	<link href="./../css/bootstrap.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">	
+	<link href="./../css/flex.css" rel="stylesheet">
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -15,61 +16,62 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->   
-
 	<nav class="navbar navbar-toggleable-md navbar-light bg-faded" id="navigation">
 	  <div class="container-fluid">
-	    <a class="navbar-brand" href="./flex.html" id="title">flex</a>
-	    <ul class="navbar-nav navbar-right">
-		   	<button class="btn navbar-btn" id="addWorkoutBtn" onclick="addWorkout()">Add Workout</button>
-		    <p class="navbar-text" id="navText"><a href="./Settings.html">Settings</a></p>
-		    <p class="navbar-text" id="navText"> <a href="./Stats.html">Stats</a></p>
-		    <p class="navbar-text" id="navText"> <a href="./Timer.html">Timer</a></p>
-		    <p class="navbar-text" id="navText"> <a href="./Library.html">Library</a></p>
+	    <ul class="navbar-nav navbar-right" id="navigationBar">
+		   	<li id="navText">
+		   		<a class="navbar-brand" href="./flex.html" id="title">flex</a>
+			   	<button class="btn navbar-btn" id="addWorkoutBtn" onclick="addWorkout()">Add Workout</button>
+			    <p class="navbar-text"><a href="./Settings.html">Settings</a></p>
+			    <p class="navbar-text"> <a href="./Stats.html">Stats</a></p>
+			    <p class="navbar-text"> <a href="./Timer.html">Timer</a></p>
+			    <p class="navbar-text"> <a href="./Library.html">Library</a></p>
+			</li>
  		</ul>
 	  </div>
-	</nav>      
+	</nav>  
 </head>
 
 <body>
 	<h3>Your Workouts</h3>
 
 	<ul class="list-group" id="workoutList">
-	  <li class="list-group-item">
-	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round text-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
+	  <li class="list-group-item justify-content-between">
+	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
 	  </li>
-	  <li class="list-group-item">
-	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
+	  <li class="list-group-item justify-content-between">
+	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
 	  </li>
-	  <li class="list-group-item">
-	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
+	  <li class="list-group-item justify-content-between">
+	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
 	  </li>
-	  <li class="list-group-item">
-	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
+	  <li class="list-group-item justify-content-between">
+	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
 	  </li>
 	</ul>
 
 	<h3>Preset Workouts</h3>
 
 	<ul class="list-group" id="workoutList">
-	  <li class="list-group-item">
-	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round text-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
+	  <li class="list-group-item justify-content-between">
+	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
 	  </li>
-	  <li class="list-group-item">
-	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
+	  <li class="list-group-item justify-content-between">
+	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
 	  </li>
-	  <li class="list-group-item">
-	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
+	  <li class="list-group-item justify-content-between">
+	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
 	  </li>
-	  <li class="list-group-item">
-	  	Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button class="btn btn-round btn-center navbar-right" id="startBtn" onclick="addWorkout()">Add Workout</button>
+	  <li class="list-group-item justify-content-between">
+	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
 	  </li>
 	</ul>
 	<script src="https://code.jquery.com/jquery.js"></script>
@@ -79,6 +81,11 @@
 <script type="text/javascript">
 	function addWorkout() {
 		location.href = "./addWorkout.html"
+	}
+</script>
+<script type="text/javascript">
+	function startWorkout() {
+		location.href = "./Workout.html"
 	}
 </script>
 </html>
