--- a/static/Settings.html
+++ b/static/Settings.html
@@ -3,6 +3,31 @@
 <html>
 <head>
 	<title>Settings</title>	
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">	<link href="./../css/bootstrap.css" rel="stylesheet">
+	<!-- this is a comment in HTML -->
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->   
+
+	<nav class="navbar navbar-toggleable-md navbar-light bg-faded" id="navigation">
+	  <div class="container-fluid">
+	    <a class="navbar-brand" href="./flex.html" id="title">flex</a>
+	    <ul class="navbar-nav navbar-right">
+		   	<button class="btn navbar-btn" id="addWorkoutBtn" onclick="addWorkout()">Add Workout</button>
+		    <p class="navbar-text" id="navText"><a href="./../static/Settings.html">Settings</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./../static/Stats.html">Stats</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./../static/Timer.html">Timer</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./../static/Library.html">Library</a></p>
+ 		</ul>
+	  </div>
+	</nav>     
 </head>
 
 <body>
