--- a/static/addWorkout.html
+++ b/static/addWorkout.html
@@ -2,11 +2,11 @@
 
 <html>
 <head>
-	<title>HCI Project Portfolio</title>	
+	<title>Add Workout</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	<link href="./../css/flex.css" rel="stylesheet">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">	<link href="./../css/bootstrap.css" rel="stylesheet">
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -16,19 +16,15 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->   
 
-	<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navigation">
+	<nav class="navbar navbar-toggleable-md navbar-light bg-faded" id="navigation">
 	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#" id="title">flex</a>
-	    </div>
-	    <ul class="nav navbar-nav navbar-right">
-	   
-	    <p class="navbar-text navbar-right" id="navText"><a href="#">Settings</a></p>
-	    <p class="navbar-text navbar-right" id="navText" href="#">Stats</p>
-	    <p class="navbar-text navbar-right" id="navText" href="#">Timer</p>
-	    <p class="navbar-text navbar-right" id="navText" href="#">Library</p>
-
-	    <button class="btn navbar-btn navbar-right" id="addWorkoutBtn">Add Workout</button>
+	    <a class="navbar-brand" href="./flex.html" id="title">flex</a>
+	    <ul class="navbar-nav navbar-right">
+		   	<button class="btn navbar-btn" id="addWorkoutBtn" onclick="addWorkout()">Add Workout</button>
+		    <p class="navbar-text" id="navText"><a href="./../static/Settings.html">Settings</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./../static/Stats.html">Stats</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./../static/Timer.html">Timer</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./../static/Library.html">Library</a></p>
  		</ul>
 	  </div>
 	</nav>     
