--- a/static/flex.html
+++ b/static/flex.html
@@ -18,7 +18,7 @@
 
 	<nav class="navbar navbar-toggleable-md navbar-light bg-faded" id="navigation">
 	  <div class="container-fluid">
-	    <a class="navbar-brand" href="#" id="title">flex</a>
+	    <a class="navbar-brand" href="./flex.html" id="title">flex</a>
 	    <ul class="navbar-nav navbar-right">
 		   	<button class="btn navbar-btn" id="addWorkoutBtn" onclick="addWorkout()">Add Workout</button>
 		    <p class="navbar-text" id="navText"><a href="./../static/Settings.html">Settings</a></p>
