--- a/static/flex.html
+++ b/static/flex.html
@@ -21,13 +21,13 @@
 	    <a class="navbar-brand" href="./flex.html" id="title">flex</a>
 	    <ul class="navbar-nav navbar-right">
 		   	<button class="btn navbar-btn" id="addWorkoutBtn" onclick="addWorkout()">Add Workout</button>
-		    <p class="navbar-text" id="navText"><a href="./../static/Settings.html">Settings</a></p>
-		    <p class="navbar-text" id="navText"> <a href="./../static/Stats.html">Stats</a></p>
-		    <p class="navbar-text" id="navText"> <a href="./../static/Timer.html">Timer</a></p>
-		    <p class="navbar-text" id="navText"> <a href="./../static/Library.html">Library</a></p>
+		    <p class="navbar-text" id="navText"><a href="./Settings.html">Settings</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./Stats.html">Stats</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./Timer.html">Timer</a></p>
+		    <p class="navbar-text" id="navText"> <a href="./Library.html">Library</a></p>
  		</ul>
 	  </div>
-	</nav>     
+	</nav>      
 </head>
 
 <body>
