--- a/static/addWorkout.html
+++ b/static/addWorkout.html
@@ -39,7 +39,7 @@
 	<div class="container">
 	  <div class="d-flex align-items-stretch align-content-center flex-column flex-wrap">
 	    <div class="col-sm">
-	      X <br> Squats
+	      <a href="#">X</a> <br> Squats
 	      	<div class="dropdown">
 			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			  	20 secs
@@ -61,7 +61,7 @@
 			</div>
 	    </div>
 	    <div class="col-sm">
-	      X <br> Squats
+	      <a href="#">X</a><br> Squats
 	      	<div class="dropdown">
 			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			  	20 secs
@@ -83,7 +83,7 @@
 			</div>
 	    </div>
 	    <div class="col-sm">
-	      X <br> Squats
+	      <a href="#">X</a><br> Squats
 	      	<div class="dropdown">
 			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			  	20 secs
@@ -105,7 +105,7 @@
 			</div>
 	    </div>
 	    <div class="col-sm">
-	      X <br> Squats
+	      <a href="#">X</a><br> Squats
 	      	<div class="dropdown">
 			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			  	20 secs
