--- a/static/Library.html
+++ b/static/Library.html
@@ -32,7 +32,11 @@
 	  </div>
 	</nav>    
 </head>
-
+<script type="text/javascript">
+	function addWorkout() {
+		location.href = "./addWorkout.html"
+	}
+</script>
 <body>
 	<p>We'll add to this later!</p>
 	</body>
