--- a/static/flex.html
+++ b/static/flex.html
@@ -38,19 +38,23 @@
 	<ul class="list-group" id="workoutList">
 	  <li class="list-group-item justify-content-between">
 	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
+	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
 	  </li>
 	  <li class="list-group-item justify-content-between">
 	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
+	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
 	  </li>
 	  <li class="list-group-item justify-content-between">
 	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
+	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
 	  </li>
 	  <li class="list-group-item justify-content-between">
 	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
+	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
 	  </li>
 	</ul>
 
@@ -59,19 +63,23 @@
 	<ul class="list-group" id="workoutList">
 	  <li class="list-group-item justify-content-between">
 	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
+	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
 	  </li>
 	  <li class="list-group-item justify-content-between">
 	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
+	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
 	  </li>
 	  <li class="list-group-item justify-content-between">
 	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
+	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
 	  </li>
 	  <li class="list-group-item justify-content-between">
 	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>
+	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
+	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
 	  </li>
 	</ul>
 	<script src="https://code.jquery.com/jquery.js"></script>
@@ -85,6 +93,11 @@
 </script>
 <script type="text/javascript">
 	function startWorkout() {
+		location.href = "./Workout.html"
+	}
+</script>
+<script type="text/javascript">
+	function editWorkout() {
 		location.href = "./Workout.html"
 	}
 </script>
